--- a/Tank/Tank.vcxproj.filters
+++ b/Tank/Tank.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="CGame.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CGameEntry.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tank.cpp">
