--- a/Tank/Tank.vcxproj
+++ b/Tank/Tank.vcxproj
@@ -185,6 +185,8 @@
   <ItemGroup>
     <ClInclude Include="CGame.h" />
     <ClInclude Include="CGameEntry.h" />
+    <ClInclude Include="CGameMenuBackground.h" />
+    <ClInclude Include="CGameMenuPanel.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameEntry.h" />
     <ClInclude Include="MainFrm.h" />
@@ -195,6 +197,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CGame.cpp" />
+    <ClCompile Include="CGameMenuBackground.cpp" />
+    <ClCompile Include="CGameMenuPanel.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
