able to draw background in other class

--- a/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj.filters
+++ b/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="CGame.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CGameMenuBackground.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TankTurmoil.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CGame.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CGameMenuBackground.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
