--- a/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj
+++ b/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj
@@ -184,7 +184,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CGame.h" />
+    <ClInclude Include="CGameEntry.h" />
     <ClInclude Include="CGameMenuBackground.h" />
+    <ClInclude Include="CGameMenuPanel.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="pch.h" />
@@ -194,7 +196,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CGame.cpp" />
+    <ClCompile Include="CGameEntry.cpp" />
     <ClCompile Include="CGameMenuBackground.cpp" />
+    <ClCompile Include="CGameMenuPanel.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
