--- a/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj
+++ b/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameHit.h" />
     <ClInclude Include="GameMap.h" />
+    <ClInclude Include="GameMenuPanel2.h" />
     <ClInclude Include="GamePathFinder.h" />
     <ClInclude Include="GameTimer.h" />
     <ClInclude Include="KeyMenuPlayer01.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="CGameMenuPanel.cpp" />
     <ClCompile Include="GameHit.cpp" />
     <ClCompile Include="GameMap.cpp" />
+    <ClCompile Include="GameMenuPanel2.cpp" />
     <ClCompile Include="KeyMenuPlayer01.cpp" />
     <ClCompile Include="KeyMenuPlayer02.cpp" />
     <ClCompile Include="MainFrm.cpp" />
