--- a/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj.filters
+++ b/TankTurmoil/TankTurmoil/TankTurmoil.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="Wall.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GameMenuPanel2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TankTurmoil.cpp">
@@ -126,6 +129,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Wall.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GameMenuPanel2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
